product (parent and variant) modules made tenant aware and integrated with kafka (variant) and caffeine (parent)